# ansible-role-tripleo-cookiecutter

./: .gitignore  .gitreview  README.md  cookiecutter.json  setup.cfg  test-requirements.txt  tox.ini
ansible-role-tripleo-{{cookiecutter.project_name}}/: .gitreview  README.md  README.rst  ansible.cfg  setup.cfg  test-requirements.txt  tox.ini
ansible-role-tripleo-{{cookiecutter.project_name}}/defaults/: main.yml
ansible-role-tripleo-{{cookiecutter.project_name}}/meta/: main.yaml  main.yml
ansible-role-tripleo-{{cookiecutter.project_name}}/tasks/: main.yml
ci-scripts/: ansible-lint.sh
playbooks/cookiecutter/: run.yaml
zuul.d/: cookiecutter.yaml  layout.yaml
