[metadata]
name = ansible-role-tripleo-cookiecutter
summary = ansible-role-tripleo-cookiecutter - Ansible cookiecutter role for the TripleO project.
description-file =
    README.md
author = TripleO Team
author-email = jillr@redhat.com
home-page = https://opendev.org/openstack/ansible-role-tripleo-cookiecutter
classifier =
  License :: OSI Approved :: Apache Software License
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Information Technology
  Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    share/ansible/roles/tripleo-cookiecutter/defaults = defaults/*
    share/ansible/roles/tripleo-cookiecutter/meta = meta/*
    share/ansible/roles/tripleo-cookiecutter/tasks = tasks/*
    share/ansible/roles/tripleo-cookiecutter/templates = templates/*
    share/ansible/roles/tripleo-cookiecutter/files = files/*

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True

