[metadata]
name = ansible-role-tripleo-{{ cookiecutter.project_name }}
summary = ansible-role-tripleo-{{ cookiecutter.project_name }} - Ansible {{ cookiecutter.project_name }} role for the TripleO project.
description-file =
    README.md
author = TripleO Team
author-email = {{ cookiecutter.author_email }}
home-page = https://git.openstack.org/cgit/openstack/ansible-role-tripleo-{{ cookiecutter.project_name }}
classifier =
  License :: OSI Approved :: Apache Software License
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Information Technology
  Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    share/ansible/roles/tripleo-{{ cookiecutter.project_name }}/defaults = defaults/*
    share/ansible/roles/tripleo-{{ cookiecutter.project_name }}/meta = meta/*
    share/ansible/roles/tripleo-{{ cookiecutter.project_name }}/tasks = tasks/*
    share/ansible/roles/tripleo-{{ cookiecutter.project_name }}/templates = templates/*
    share/ansible/roles/tripleo-{{ cookiecutter.project_name }}/files = files/*

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True

